--- a/Backend/Backend.API/appsettings.json
+++ b/Backend/Backend.API/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "MongoDbConfiguration": {
     "ConnectionString": "mongodb://localhost:27017",
-    "Database": "catalogdb"
-  }
+    "Database": "moneyApp"
+  },
+  "JwtKey": "SecretPhrase"
 }
