--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,22 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/Backend/.vs/Backend/FileContentIndex
-/Backend/Backend.API/bin/Debug/net8.0
-/Backend/Backend.API/obj/Debug/net8.0
-/Backend/Backend.Infrastructure/bin/Debug/net8.0
+/Backend/.vs/Backend/
+/Backend/.vs/Backend
+/Backend/Backend.API/bin
+/Backend/Backend.API/bin/
+/Backend/Backend.API/obj/
+/Backend/Backend.API/obj
+/Backend/Backend.Infrastructure/bin
+/Backend/Backend.Infrastructure/bin/
 /Backend/Backend.Infrastructure/obj
+/Backend/Backend.API/obj/project.nuget.cache
+/Backend/Backend.API/obj/project.assets.json
+/Backend/Backend.API/obj/Backend.API.csproj.nuget.dgspec.json
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.AssemblyInfo.cs
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.AssemblyInfoInputs.cache
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.assets.cache
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.AssemblyReference.cache
+/Backend/.vs/ProjectEvaluation/backend.metadata.v7.bin
+/Backend/.vs/ProjectEvaluation/backend.projects.v7.bin
+/Backend/.vs/Backend/v17/.suo
