--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,31 @@
 /Backend/.vs/ProjectEvaluation/backend.metadata.v7.bin
 /Backend/.vs/ProjectEvaluation/backend.projects.v7.bin
 /Backend/.vs/Backend/v17/.suo
+/Backend/.vs/Backend/v17/.futdcache.v2
+/Backend/Backend.API/bin/Debug/net8.0/appsettings.json
+/Backend/Backend.API/bin/Debug/net8.0/Backend.API.deps.json
+/Backend/Backend.API/bin/Debug/net8.0/Backend.API.dll
+/Backend/Backend.API/bin/Debug/net8.0/Backend.API.exe
+/Backend/Backend.API/bin/Debug/net8.0/Backend.API.pdb
+/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.dll
+/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.pdb
+/Backend/Backend.Core/obj/Debug/net8.0/refint/Backend.Core.dll
+/Backend/Backend.Core/obj/Debug/net8.0/ref/Backend.Core.dll
+/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfo.cs
+/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfoInputs.cache
+/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.dll
+/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.pdb
+/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.sourcelink.json
+/Backend/Backend.API/obj/Debug/net8.0/apphost.exe
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.CoreCompileInputs.cache
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.FileListAbsolute.txt
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.dll
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.pdb
+/Backend/Backend.API/obj/Debug/net8.0/Backend.API.sourcelink.json
+/Backend/Backend.API/obj/Debug/net8.0/refint/Backend.API.dll
+/Backend/Backend.API/obj/Debug/net8.0/ref/Backend.API.dll
+*.dll
+*.pdb
+/Backend/Backend.Utils/obj/Debug/net8.0
+/Backend/Backend.Utils/obj
+/Backend/Backend.Utils/bin/Debug/net8.0
