--- a/Backend/Backend.API/Backend.API.csproj
+++ b/Backend/Backend.API/Backend.API.csproj
@@ -8,18 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="AppAny.HotChocolate.FluentValidation" Version="0.11.0" />
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="HotChocolate" Version="13.8.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.7.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Backend.Core\Backend.Core.csproj" />
     <ProjectReference Include="..\Backend.Infrastructure\Backend.Infrastructure.csproj" />
+    <ProjectReference Include="..\Backend.Utils\Backend.Utils.csproj" />
   </ItemGroup>
 
 </Project>
