--- a/Backend/Backend.Infrastructure/Backend.Infrastructure.csproj
+++ b/Backend/Backend.Infrastructure/Backend.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend.Core\Backend.Core.csproj" />
+    <ProjectReference Include="..\Backend.Utils\Backend.Utils.csproj" />
   </ItemGroup>
 
 </Project>
