Added dipendencies hotchocolate and graphql

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@
 /Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.GlobalUsings.g.cs
 /Backend/Backend.Core/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
 /Backend/Backend.Core/obj
+/Backend/Backend.Core/bin/Debug/net8.0
