--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^4.12.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
