Moved queries in query definition file

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-<<<<<<< HEAD
 /Backend/Backend.Utils/obj
 /Backend/.vs/Backend/v17/.suo
 /Backend/Backend.API/obj/Debug/net8.0/Backend.API.AssemblyInfo.cs
@@ -13,93 +12,24 @@
 *.dll
 *.pdb
 /Backend/Backend.Utils/bin/Debug/net8.0/Backend.Utils.deps.json
-=======
-/Backend/.vs/Backend/
-/Backend/.vs/Backend
-/Backend/Backend.API/bin
-/Backend/Backend.API/bin/
-/Backend/Backend.API/obj/
-/Backend/Backend.API/obj
-/Backend/Backend.Infrastructure/bin
-/Backend/Backend.Infrastructure/bin/
-/Backend/Backend.Infrastructure/obj
-/Backend/Backend.API/obj/project.nuget.cache
-/Backend/Backend.API/obj/project.assets.json
-/Backend/Backend.API/obj/Backend.API.csproj.nuget.dgspec.json
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.AssemblyInfo.cs
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.AssemblyInfoInputs.cache
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.assets.cache
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.AssemblyReference.cache
-/Backend/.vs/ProjectEvaluation/backend.metadata.v7.bin
-/Backend/.vs/ProjectEvaluation/backend.projects.v7.bin
-/Backend/.vs/Backend/v17/.suo
-/Backend/.vs/Backend/v17/.futdcache.v2
-/Backend/Backend.API/bin/Debug/net8.0/appsettings.json
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.deps.json
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.dll
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.exe
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.pdb
-/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.dll
-/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.pdb
-/Backend/Backend.Core/obj/Debug/net8.0/refint/Backend.Core.dll
-/Backend/Backend.Core/obj/Debug/net8.0/ref/Backend.Core.dll
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfo.cs
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfoInputs.cache
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.dll
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.pdb
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.sourcelink.json
-/Backend/Backend.API/obj/Debug/net8.0/apphost.exe
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.CoreCompileInputs.cache
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.FileListAbsolute.txt
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.dll
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.pdb
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.sourcelink.json
-/Backend/Backend.API/obj/Debug/net8.0/refint/Backend.API.dll
-/Backend/Backend.API/obj/Debug/net8.0/ref/Backend.API.dll
-*.dll
-*.pdb
-/Backend/Backend.Utils/obj/Debug/net8.0
-/Backend/Backend.Utils/obj
-/Backend/Backend.Utils/bin/Debug/net8.0
-/Backend/.vs/Backend/v17/.futdcache.v2
-/Backend/Backend.API/bin/Debug/net8.0/appsettings.json
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.deps.json
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.dll
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.exe
-/Backend/Backend.API/bin/Debug/net8.0/Backend.API.pdb
-/Backend/Backend.API/appsettings.json
-/Backend/Backend.API/Backend.API.csproj.user
-/Backend/Backend.API/obj/Backend.API.csproj.nuget.g.props
-/Backend/Backend.API/obj/Debug/net8.0/apphost.exe
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.CoreCompileInputs.cache
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.csproj.FileListAbsolute.txt
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.dll
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.GeneratedMSBuildEditorConfig.editorconfig
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.genruntimeconfig.cache
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.pdb
-/Backend/Backend.API/obj/Debug/net8.0/Backend.API.sourcelink.json
-/Backend/Backend.API/obj/Debug/net8.0/refint/Backend.API.dll
-/Backend/Backend.Core/obj/Debug/net8.0/ref/Backend.Core.dll
-/Backend/Backend.Core/obj/Debug/net8.0/refint/Backend.Core.dll
-/Backend/Backend.Core/obj/Backend.Core.csproj.nuget.dgspec.json
-/Backend/Backend.Core/obj/Backend.Core.csproj.nuget.g.props
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfo.cs
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.AssemblyInfoInputs.cache
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.assets.cache
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.csproj.AssemblyReference.cache
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.csproj.CoreCompileInputs.cache
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.csproj.FileListAbsolute.txt
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.dll
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.GeneratedMSBuildEditorConfig.editorconfig
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.pdb
-/Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.sourcelink.json
-/Backend/Backend.Core/obj/project.assets.json
-/Backend/Backend.Core/obj/project.nuget.cache
-/Backend/Backend.API/obj/Debug/net8.0/ref/Backend.API.dll
-/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.dll
-/Backend/Backend.Core/bin/Debug/net8.0/Backend.Core.pdb
->>>>>>> authentication
 /Backend/Backend.Core/obj/Debug/net8.0/Backend.Core.GlobalUsings.g.cs
 /Backend/Backend.Core/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
 /Backend/Backend.Core/obj
 /Backend/Backend.Core/bin/Debug/net8.0
+frontend/graphql/fragment-masking.ts
+frontend/graphql/gql.ts
+frontend/graphql/graphql.ts
+frontend/graphql/index.ts
+frontend/utils/queryDefinition.ts
+frontend/graphql/fragment-masking.ts
+frontend/graphql/gql.ts
+frontend/graphql/graphql.ts
+frontend/graphql/index.ts
+frontend/graphql/index.ts
+frontend/graphql/gql.ts
+frontend/graphql/graphql.ts
+/Backend/Backend.API/bin/Debug/net8.0
+/Backend/Backend.API/obj
+/Backend/Backend.API/Backend.API.csproj.user
+/Backend/Backend.Infrastructure/bin/Debug/net8.0
+/Backend/Backend.Infrastructure/obj
