--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "framer-motion": "^10.17.9",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
