--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,12 @@
     "codegen": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.15",
-    "@tanstack/react-query-devtools": "^5.17.21",
     "framer-motion": "^10.17.9",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
@@ -27,16 +25,16 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
-    "zod": "^3.22.4"
+    "swr": "^2.2.4",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-react-query": "^6.0.0",
     "@hookform/devtools": "^4.3.1",
     "@parcel/watcher": "^2.4.0",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
