--- a/Backend/Backend.API/appsettings.json
+++ b/Backend/Backend.API/appsettings.json
@@ -14,7 +14,8 @@
     "corspolicy": "corspolicy",
     "Jwt": {
         "Key": "{bb9d9e63-60a5-4844-9dd6-30627b64ea12}",
+        "Authority": "http://localhost:5116/graphql",
         "Issuer": "MoneyApp.com",
-        "Audience": "MoneyApp.com"
+        "Audiences": "MoneyApp.com"
     }
 }
