--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.15",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.17.9",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
