--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-select": "^5.8.0",
+    "sonner": "^1.4.0",
     "swr": "^2.2.4",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
