Fixed authentication issues

--- a/Backend/Backend.API/appsettings.json
+++ b/Backend/Backend.API/appsettings.json
@@ -13,9 +13,8 @@
     },
     "corspolicy": "corspolicy",
     "Jwt": {
-        "Key": "{bb9d9e63-60a5-4844-9dd6-30627b64ea12}",
-        "Authority": "http://localhost:5116/graphql",
+        "Key": "RONrVfd9jSCHg08v5bWmesn7kMXx3uhz",
         "Issuer": "MoneyApp.com",
-        "Audiences": "MoneyApp.com"
+        "Audience": "MoneyApp.com"
     }
 }
