FE implemented addCategory

--- a/Backend/Backend.API/appsettings.json
+++ b/Backend/Backend.API/appsettings.json
@@ -7,10 +7,10 @@
     },
     "AllowedHosts": "*",
     "AllowedFrontendHosts": "http://localhost:3000",
-    "MongoDbConfiguration": {
-        "ConnectionString": "mongodb+srv://Daniele:Mongodb@cluster0.wxjuzs3.mongodb.net/moneyApp",
-        "Database": "moneyApp"
-    },
+  "MongoDbConfiguration": {
+    "ConnectionString": "mongodb://localhost:27017/moneyApp",
+    "Database": "moneyApp"
+  },
     "corspolicy": "corspolicy",
     "Jwt": {
         "Key": "RONrVfd9jSCHg08v5bWmesn7kMXx3uhz",
