--- a/Backend/Backend.API/appsettings.json
+++ b/Backend/Backend.API/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
     "AllowedFrontendHosts": "http://localhost:3000",
     "MongoDbConfiguration": {
-        "ConnectionString": "mongodb+srv://Daniele:Mongodb@cluster0.wxjuzs3.mongodb.net/moneyApp",
+        "ConnectionString": "",
         "Database": "moneyApp"
     },
     "corspolicy": "corspolicy",
